getMyHomeworks updated with time zone